--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,24 @@
-language: node_js
-cache:
-  directories:
-    - ~/.npm
-node_js:
-  - "12"
-git:
-  depth: 3
-script:
-  - yarn build
-deploy:
-  provider: pages
-  edge: true
-  skip-cleanup: true
-  keep-history: true
-  github-token: $GITHUB_TOKEN
-  local-dir: dist/
-  target-branch: gh-pages
-  commit_message: "Deploy Release"
-  on:
-    branch: main
+{
+  "language": "node_js",
+  "os": ["linux"],
+  "dist": "xenial",
+  "cache": { "directories": ["~/.npm"] },
+  "node_js": ["12"],
+  "git": { "depth": 3 },
+  "script": ["yarn build"],
+  "deploy":
+    [
+      {
+        "provider": "pages",
+        "strategy": "git",
+        "edge": true,
+        "commit_message": "Deploy Release",
+        "on": { "branch": ["main"] },
+        "skip_cleanup": true,
+        "keep_history": true,
+        "token": "$GITHUB_TOKEN",
+        "local_dir": "dist/",
+        "target_branch": "gh-pages",
+      },
+    ],
+}
